syntax = "proto3";

option go_package = "common/communication/protocol";

import "proto/stages/result1.proto";
import "proto/stages/result2.proto";
import "proto/stages/result3.proto";
import "proto/stages/result4.proto";
import "proto/stages/result5.proto";

enum MessageStatus {
    SUCCESS = 0;
    FAIL = 1;
    PENDING = 2;
}

message BatchAck {
    string batch_id = 1;
    MessageStatus status = 2;
}

message SyncAck {
    string client_id = 1;
}

message ResultsResponse {
    
    message Result{
        oneof Message {
            Result1 result1 = 1;
            Result2 result2 = 2;
            Result3 result3 = 3;
            Result4 result4 = 4;
            Result5 result5 = 5;
        };
    }   
   
    MessageStatus status = 1;
    repeated Result results = 2;
}


message ServerClientMessage{
    oneof message {
        BatchAck batch_ack = 1;
        SyncAck sync_ack = 2;
        ResultsResponse results = 3;
    }
}